
8. (Roger Kumpf - HP) 9 Apr 2002 - Updated the Instance, Association, and
   Class provider interfaces to use CIMPropertyList instead of Array<String>
   for the propertyList parameters.  All providers that implement a method
   with a propertyList parameter must be modified in accordance with this
   change.  All providers linked into the Pegasus build have been updated.

========================================================================

Version 1.08 working towards 1.1 - Started 27 March 2002
TAG: Version_1_08. Note that the tagging was not all simultaneous because
of problems with the CVS repository

1. KS 27 March 2002 - Updaded pegasus version to 1.08. Took snapshot.
   Tagged CVS 1_08.
   
2. KS 2 April 2002 -Add better qualifier testfunctions to cimclass, 
   qualifierlist, etc. and start to add specific qualifier tests on creates.
========================================================================

Version 1.07 working towards 1.1 - Started 4 Feb 2002
Started just before cutover to the new dispatcher, etc.
TAG: VERSION_1_07

1. KS - Updated pegsusversion to 1.07  and tagged file.

2. (Markus Mueller) 05 Feb 2002 - AIX support.

3. (Sushma Fernandes - HP) 13 Feb 2002 Implemented FileSystemPropertyOwner
    class to support PEGASUS_HOME dependent properties like Repository
    location, Provider location and Consumer location.
    The default location for these properties continue to be the same
    as before. Added support to the Config Manager to own the
    Pegasus Home variable and implemented method (getHomedPath) to
    return absolute paths based from Pegasus Home.

    For more information look in to the following files:
    pegasus/src/Pegasus/Config/ConfigManager.h
    pegasus/src/Pegasus/Config/ConfigManager.cpp
    pegasus/src/Pegasus/Config/FileSystemPropertyOwner.h
    pegasus/src/Pegasus/Config/FileSystemPropertyOwner.cpp

4. KS -  18 Feb 02 Add changes to test for and set the NULL value for CIMValues.