@@ -73,6 +73,8 @@ PEGASUS_NAMESPACE_BEGIN
 #define PEGASUS_NAMESPACENAME_AUTHORIZATION PEGASUS_NAMESPACENAME_INTERNAL
 #define PEGASUS_NAMESPACENAME_PROVIDERREG   PEGASUS_NAMESPACENAME_INTEROP
 
+#define PEGASUS_HTTPHEADERTAG_ERRORDETAIL "PGErrorDetail"
+
 PEGASUS_NAMESPACE_END
 
 #endif /* Pegasus_Constants_h */
