@@ -24,8 +24,9 @@
 // Author: Mike Brasher (mbrasher@bmc.com)
 //
 // Modified By: Nitin Upasani, Hewlett-Packard Company (Nitin_Upasani@hp.com)
-// Modified By: Carol Ann Krug Graves, Hewlett-Packard Company 
-//              (carolann_graves@hp.com)
+//              Carol Ann Krug Graves, Hewlett-Packard Company 
+//                  (carolann_graves@hp.com)
+//              Roger Kumpf, Hewlett-Packard Company (roger_kumpf@hp.com)
 //
 //%/////////////////////////////////////////////////////////////////////////////
 
@@ -43,10 +44,11 @@ Uint32 message_mask::type_lifetime =          0x00000008;
 Uint32 message_mask::type_socket =            0x00000010;
 Uint32 message_mask::type_connection =        0x00000020;
 Uint32 message_mask::type_http =              0x00000040;
-Uint32 message_mask::type_cimom =             0x00000080;
-Uint32 message_mask::type_control =           0x00000100;
-Uint32 message_mask::type_service =           0x00000200;
-Uint32 message_mask::type_broadcast =         0x00000400;
+Uint32 message_mask::type_http_error =        0x00000080;
+Uint32 message_mask::type_cimom =             0x00000100;
+Uint32 message_mask::type_control =           0x00000200;
+Uint32 message_mask::type_service =           0x00000400;
+Uint32 message_mask::type_broadcast =         0x00000800;
 
 Uint32 message_mask::ha_no_delete =           0x00100000;
 Uint32 message_mask::ha_request =             0x00200000;
@@ -143,6 +145,7 @@ static const char* _MESSAGE_TYPE_STRINGS[] =
     "SOCKET_MESSAGE",
     "CLOSE_CONNECTION_MESSAGE",
     "HTTP_MESSAGE",
+    "HTTP_ERROR_MESSAGE"
 };
 
 const char* MessageTypeToString(Uint32 messageType)
